// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header.jsx <HeaderUI /> should render and match snapshot for NOT home page 1`] = `
<Navbar
  className="header mb-3"
  color="light"
  expand="lg"
  light={true}
  tag="nav"
>
  <Link
    className="nav-link brand"
    to="/"
  >
    <img
      alt="Logo"
      className="logo"
      src="logo.png"
    />
    ГРСУ
  </Link>
  <NavbarToggler
    onClick={[Function]}
    tag="button"
    type="button"
  />
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={false}
    mountOnEnter={false}
    navbar={true}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <Nav
      className="ml-auto"
      navbar={true}
      tag="ul"
      vertical={false}
    >
      <div
        className="d-flex align-items-center mr-5 invisible"
      >
        <span>
          Оперативное время:  
        </span>
        <DatePicker
          allowSameDay={false}
          className="date_picker"
          dateFormat="dd/MM/yyyy"
          dateFormatCalendar="LLLL yyyy"
          disabled={false}
          disabledKeyboardNavigation={false}
          dropdownMode="scroll"
          inlineFocusSelectedMonth={false}
          locale="ru"
          monthsShown={1}
          nextMonthButtonLabel="Next month"
          onBlur={[Function]}
          onChange={[Function]}
          onClickOutside={[Function]}
          onFocus={[Function]}
          onInputClick={[Function]}
          onInputError={[Function]}
          onKeyDown={[Function]}
          onMonthChange={[Function]}
          onSelect={[Function]}
          onYearChange={[Function]}
          preventOpenOnFocus={false}
          previousMonthButtonLabel="Previous Month"
          readOnly={false}
          renderDayContents={[Function]}
          selected={2019-05-05T00:00:00.000Z}
          shouldCloseOnSelect={true}
          showMonthYearPicker={false}
          showTimeInput={false}
          showTimeSelect={false}
          strictParsing={false}
          timeCaption="Time"
          timeInputLabel="Time"
          timeIntervals={30}
          withPortal={false}
        />
      </div>
      <div
        className="d-flex align-items-center mr-5 invisible"
      >
        События с  
        <DatePicker
          allowSameDay={false}
          className="date_picker"
          dateFormat="dd/MM/yyyy"
          dateFormatCalendar="LLLL yyyy"
          disabled={false}
          disabledKeyboardNavigation={false}
          dropdownMode="scroll"
          inlineFocusSelectedMonth={false}
          locale="ru"
          monthsShown={1}
          nextMonthButtonLabel="Next month"
          onBlur={[Function]}
          onChange={[Function]}
          onClickOutside={[Function]}
          onFocus={[Function]}
          onInputClick={[Function]}
          onInputError={[Function]}
          onKeyDown={[Function]}
          onMonthChange={[Function]}
          onSelect={[Function]}
          onYearChange={[Function]}
          preventOpenOnFocus={false}
          previousMonthButtonLabel="Previous Month"
          readOnly={false}
          renderDayContents={[Function]}
          selected={2019-05-05T00:00:00.000Z}
          shouldCloseOnSelect={true}
          showMonthYearPicker={false}
          showTimeInput={false}
          showTimeSelect={false}
          strictParsing={false}
          timeCaption="Time"
          timeInputLabel="Time"
          timeIntervals={30}
          withPortal={false}
        />
          по  
        <DatePicker
          allowSameDay={false}
          className="date_picker"
          dateFormat="dd/MM/yyyy"
          dateFormatCalendar="LLLL yyyy"
          disabled={false}
          disabledKeyboardNavigation={false}
          dropdownMode="scroll"
          inlineFocusSelectedMonth={false}
          locale="ru"
          minDate={2019-05-05T00:00:00.000Z}
          monthsShown={1}
          nextMonthButtonLabel="Next month"
          onBlur={[Function]}
          onChange={[Function]}
          onClickOutside={[Function]}
          onFocus={[Function]}
          onInputClick={[Function]}
          onInputError={[Function]}
          onKeyDown={[Function]}
          onMonthChange={[Function]}
          onSelect={[Function]}
          onYearChange={[Function]}
          preventOpenOnFocus={false}
          previousMonthButtonLabel="Previous Month"
          readOnly={false}
          renderDayContents={[Function]}
          selected={2019-05-05T00:00:00.000Z}
          shouldCloseOnSelect={true}
          showMonthYearPicker={false}
          showTimeInput={false}
          showTimeSelect={false}
          strictParsing={false}
          timeCaption="Time"
          timeInputLabel="Time"
          timeIntervals={30}
          withPortal={false}
        />
      </div>
      <NavItem
        tag="li"
      >
        <Link
          className="nav-link"
          to="event_types"
        >
          Типы событий
        </Link>
      </NavItem>
      <NavItem
        tag="li"
      >
        <Link
          className="nav-link"
          to="periods"
        >
          Периоды
        </Link>
      </NavItem>
      <NavItem
        hidden={true}
        tag="li"
      >
        <NavLink
          href="#"
          onClick={[Function]}
          tag="a"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="file-pdf"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
        </NavLink>
      </NavItem>
      <UncontrolledDropdown
        inNavbar={true}
        nav={true}
      >
        <DropdownToggle
          aria-haspopup={true}
          color="secondary"
          nav={true}
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="user-alt"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
        </DropdownToggle>
        <DropdownMenu
          flip={true}
          right={true}
          tag="div"
        >
          <DropdownItem
            tag="button"
            toggle={true}
          >
            Профиль
          </DropdownItem>
          <DropdownItem
            divider={true}
            tag="button"
            toggle={true}
          />
          <DropdownItem
            tag="button"
            toggle={true}
          >
            Выйти
          </DropdownItem>
        </DropdownMenu>
      </UncontrolledDropdown>
    </Nav>
  </Collapse>
</Navbar>
`;

exports[`header.jsx <HeaderUI /> should render and match snapshot for home page 1`] = `
<Navbar
  className="header mb-3"
  color="light"
  expand="lg"
  light={true}
  tag="nav"
>
  <Link
    className="nav-link brand"
    to="/"
  >
    <img
      alt="Logo"
      className="logo"
      src="logo.png"
    />
    ГРСУ
  </Link>
  <NavbarToggler
    onClick={[Function]}
    tag="button"
    type="button"
  />
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={false}
    mountOnEnter={false}
    navbar={true}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <Nav
      className="ml-auto"
      navbar={true}
      tag="ul"
      vertical={false}
    >
      <div
        className="d-flex align-items-center mr-5"
      >
        <span>
          Оперативное время:  
        </span>
        <DatePicker
          allowSameDay={false}
          className="date_picker"
          dateFormat="dd/MM/yyyy"
          dateFormatCalendar="LLLL yyyy"
          disabled={false}
          disabledKeyboardNavigation={false}
          dropdownMode="scroll"
          inlineFocusSelectedMonth={false}
          locale="ru"
          monthsShown={1}
          nextMonthButtonLabel="Next month"
          onBlur={[Function]}
          onChange={[Function]}
          onClickOutside={[Function]}
          onFocus={[Function]}
          onInputClick={[Function]}
          onInputError={[Function]}
          onKeyDown={[Function]}
          onMonthChange={[Function]}
          onSelect={[Function]}
          onYearChange={[Function]}
          preventOpenOnFocus={false}
          previousMonthButtonLabel="Previous Month"
          readOnly={false}
          renderDayContents={[Function]}
          selected={2019-05-05T00:00:00.000Z}
          shouldCloseOnSelect={true}
          showMonthYearPicker={false}
          showTimeInput={false}
          showTimeSelect={false}
          strictParsing={false}
          timeCaption="Time"
          timeInputLabel="Time"
          timeIntervals={30}
          withPortal={false}
        />
      </div>
      <div
        className="d-flex align-items-center mr-5"
      >
        События с  
        <DatePicker
          allowSameDay={false}
          className="date_picker"
          dateFormat="dd/MM/yyyy"
          dateFormatCalendar="LLLL yyyy"
          disabled={false}
          disabledKeyboardNavigation={false}
          dropdownMode="scroll"
          inlineFocusSelectedMonth={false}
          locale="ru"
          monthsShown={1}
          nextMonthButtonLabel="Next month"
          onBlur={[Function]}
          onChange={[Function]}
          onClickOutside={[Function]}
          onFocus={[Function]}
          onInputClick={[Function]}
          onInputError={[Function]}
          onKeyDown={[Function]}
          onMonthChange={[Function]}
          onSelect={[Function]}
          onYearChange={[Function]}
          preventOpenOnFocus={false}
          previousMonthButtonLabel="Previous Month"
          readOnly={false}
          renderDayContents={[Function]}
          selected={2019-05-05T00:00:00.000Z}
          shouldCloseOnSelect={true}
          showMonthYearPicker={false}
          showTimeInput={false}
          showTimeSelect={false}
          strictParsing={false}
          timeCaption="Time"
          timeInputLabel="Time"
          timeIntervals={30}
          withPortal={false}
        />
          по  
        <DatePicker
          allowSameDay={false}
          className="date_picker"
          dateFormat="dd/MM/yyyy"
          dateFormatCalendar="LLLL yyyy"
          disabled={false}
          disabledKeyboardNavigation={false}
          dropdownMode="scroll"
          inlineFocusSelectedMonth={false}
          locale="ru"
          minDate={2019-05-05T00:00:00.000Z}
          monthsShown={1}
          nextMonthButtonLabel="Next month"
          onBlur={[Function]}
          onChange={[Function]}
          onClickOutside={[Function]}
          onFocus={[Function]}
          onInputClick={[Function]}
          onInputError={[Function]}
          onKeyDown={[Function]}
          onMonthChange={[Function]}
          onSelect={[Function]}
          onYearChange={[Function]}
          preventOpenOnFocus={false}
          previousMonthButtonLabel="Previous Month"
          readOnly={false}
          renderDayContents={[Function]}
          selected={2019-05-05T00:00:00.000Z}
          shouldCloseOnSelect={true}
          showMonthYearPicker={false}
          showTimeInput={false}
          showTimeSelect={false}
          strictParsing={false}
          timeCaption="Time"
          timeInputLabel="Time"
          timeIntervals={30}
          withPortal={false}
        />
      </div>
      <NavItem
        tag="li"
      >
        <Link
          className="nav-link"
          to="event_types"
        >
          Типы событий
        </Link>
      </NavItem>
      <NavItem
        tag="li"
      >
        <Link
          className="nav-link"
          to="periods"
        >
          Периоды
        </Link>
      </NavItem>
      <NavItem
        hidden={false}
        tag="li"
      >
        <NavLink
          href="#"
          onClick={[Function]}
          tag="a"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="file-pdf"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
        </NavLink>
      </NavItem>
      <UncontrolledDropdown
        inNavbar={true}
        nav={true}
      >
        <DropdownToggle
          aria-haspopup={true}
          color="secondary"
          nav={true}
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="user-alt"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
        </DropdownToggle>
        <DropdownMenu
          flip={true}
          right={true}
          tag="div"
        >
          <DropdownItem
            tag="button"
            toggle={true}
          >
            Профиль
          </DropdownItem>
          <DropdownItem
            divider={true}
            tag="button"
            toggle={true}
          />
          <DropdownItem
            tag="button"
            toggle={true}
          >
            Выйти
          </DropdownItem>
        </DropdownMenu>
      </UncontrolledDropdown>
    </Nav>
  </Collapse>
</Navbar>
`;
